[metadata]
name = pybolt-client
version = 1.0.3
description = "REST API Client for Passbolt servers."
long_description_content_type = text/markdown
long_description = file: README.md

[options]
python_requires >=3.10
packages = find:
install_requires =
    requests >=2,<3
    requests_gpgauthlib == 0.1.2

[options.extras_require]
test =
    pytest==7.2.0
    black==22.10.0
    isort==5.10.1
    flake8==4.0.1
    pytest-flake8==1.1.1
    flake8-black==0.3.5
    flake8-builtins==2.0.1
    flake8-docstrings==1.6.0
    flake8-isort==5.0.3
    flake8-logging-format==0.9.0
    flake8-print==5.0.0